--- a/.github/workflows/Snake.yml
+++ b/.github/workflows/Snake.yml
@@ -34,6 +34,11 @@ jobs:
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
           
+          outputs: |
+            dist/github-snake.svg
+            dist/github-snake-dark.svg?palette=github-dark
+            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+            
      # show the status of the build. Makes it easier for debugging (if there's any issues).
       - run: git status
           
