--- a/.github/workflows/Snake.yml
+++ b/.github/workflows/Snake.yml
@@ -37,7 +37,7 @@ jobs:
           outputs: |
             dist/github-snake.svg
             dist/github-snake-dark.svg?palette=github-dark
-            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+            dist/ocean.gif?color_snake=red&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
             
      # show the status of the build. Makes it easier for debugging (if there's any issues).
       - run: git status
